--- a/ranking.html
+++ b/ranking.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Ranking via XLSX</title>
+    <title>Ranking via XLS</title>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     
@@ -206,7 +206,7 @@
 </head>
 <body>
     <div id="bodycontainer">
-    <h1>Calculadora de Ranking via Upload XLSX</h1>
+    <h1>Ranking via XLS</h1>
     <input type="file" id="upload" accept=".xlsx" onchange="processarArquivo(event)" style="display:none;"/>
     <label id="botaoUpload" for="upload">Select file</label>
     <br><br>
