--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             font-family: Roboto Slab;
             font-size: large;
             background-color: #676767;
-            width: 46.5%;
+            width: 30%;
             height: 100px;
             border-radius: 5px;
             border-width: 0px;
@@ -63,8 +63,9 @@
     <div id="bodycontainer">
     <h1>Ranking de Corrida</h1>
         <div id="botoesContainer">
-        <a href="https://pedroichimaru.github.io/ranking-corrida/calculadora.html">Calculadora</a>
-        <a href="https://pedroichimaru.github.io/ranking-corrida/ranking.html">Ranking via XLS</a>
+        <a href="https://pedroichimaru.github.io/ranking-corrida/calculadora.html">Calculadora Atleta</a>
+        <a href="https://pedroichimaru.github.io/ranking-corrida/rankingxls.html">Ranking via XLS</a>
+        <a href="https://pedroichimaru.github.io/ranking-corrida/ranking.html">Ranking</a>
         </div>
     </div>
 </body>
