--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div id="botoesContainer">
         <a href="https://pedroichimaru.github.io/ranking-corrida/calculadora.html">Calculadora Atleta</a>
         <a href="https://pedroichimaru.github.io/ranking-corrida/rankingxls.html">Ranking via XLS</a>
-        <a href="https://pedroichimaru.github.io/ranking-corrida/ranking.html">Ranking</a>
+        <a href="https://pedroichimaru.github.io/ranking-corrida/ranking.html">Ranking via Database</a>
         </div>
     </div>
 </body>
