--- a/rankingxls.html
+++ b/rankingxls.html
@@ -192,7 +192,7 @@
     <div id="bodycontainer">
         <h1>Ranking via XLS</h1>
         <input type="file" id="upload" accept=".xlsx" onchange="processarArquivo(event)" style="display:none;"/>
-        <label id="botaoUpload" for="upload">Select file</label>
+        <label id="botaoUpload" for="upload">Selecionar XLS</label>
         <span id="file-name"></span>
         <br><br>
         <button id="botoes" onclick="calcularRanking()">Gerar Ranking</button>
