--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         
         #bodycontainer {
             background-color: #e5e7ea;
-            width: 800px;
+            width: 90%;
+            max-width: 800px;
             margin-top: 30px;
             margin-bottom: 30px;
             padding-left: 30px;
@@ -31,7 +32,7 @@
         #botoesContainer {
             width: 100%;
             display: flex;
-            justify-content:space-between;
+            justify-content: space-between;
         }
         
         a {
