--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             font-size: large;
             background-color: #676767;
             width: 30%;
+            max-width: 200px;
             height: 100px;
             border-radius: 5px;
             border-width: 0px;
