--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         #bodycontainer {
             background-color: #e5e7ea;
             width: 80%;
-            max-width: 700px;
+            max-width: 600px;
             margin-top: 30px;
             margin-bottom: 30px;
             padding-left: 30px;
@@ -37,10 +37,10 @@
         
         a {
             font-family: Roboto Slab;
-            font-size: large;
+            font-size: 16px;
             background-color: #676767;
             width: 30%;
-            max-width: 200px;
+            max-width: 170px;
             height: 100px;
             border-radius: 5px;
             border-width: 0px;
