--- a/calculadora.html
+++ b/calculadora.html
@@ -15,18 +15,17 @@
             margin: 0;
         }
         
-        #bodycontainer {
-            background-color: #e5e7ea;
-            width: 800px;
-            margin-top: 30px;
-            margin-bottom: 30px;
-            padding-left: 30px;
-            padding-right: 30px;
-            padding-bottom: 30px;
-            border-radius: 10px;
-            font-family: Roboto Slab;
-            font-size: smaller;
-        }
+    #bodycontainer {
+        background-color: #e5e7ea;
+        width: 80%;
+        max-width: 800px;
+        margin: 30px 0;
+        padding: 30px;
+        padding-top: 0;
+        border-radius: 10px;
+        font-family: 'Roboto Slab', serif;
+        font-size: smaller;
+    }
         
         #botoes {
             font-family: Roboto Slab;
