--- a/rankingxls.html
+++ b/rankingxls.html
@@ -16,18 +16,17 @@
             margin: 0;
         }
         
-        #bodycontainer {
-            background-color: #e5e7ea;
-            width: 800px;
-            margin-top: 30px;
-            margin-bottom: 30px;
-            padding-left: 30px;
-            padding-right: 30px;
-            padding-bottom: 30px;
-            border-radius: 10px;
-            font-family: 'Roboto Slab', serif;
-            font-size: smaller;
-        }
+    #bodycontainer {
+        background-color: #e5e7ea;
+        width: 80%;
+        max-width: 800px;
+        margin: 30px 0;
+        padding: 30px;
+        padding-top: 0;
+        border-radius: 10px;
+        font-family: 'Roboto Slab', serif;
+        font-size: smaller;
+    }
         
         #botoes, #botaoUpload {
             font-family: 'Roboto Slab', serif;
@@ -194,7 +193,7 @@
         function exibirRanking(ranking) {
             const resultadoDiv = document.getElementById("resultadoFinal");
             resultadoDiv.innerHTML = "<h2>Ranking</h2>";
-            let html = "<table><tr><th>Posição</th><th>Nome</th><th>Idade</th><th>Gênero</th><th>Pontuação</th></tr>";
+            let html = "<table><tr><th>Posição</th><th>Nome</th><th>Idade</th><th>Gênero</th><th>Pontos</th></tr>";
             ranking.forEach((atleta, index) => {
                 html += `<tr><td>${index + 1}</td><td>${atleta.Nome}</td><td>${atleta.Idade}</td><td>${atleta.Genero}</td><td>${atleta.Pontuacao}</td></tr>`;
             });
