--- a/rankingxls.html
+++ b/rankingxls.html
@@ -86,7 +86,7 @@
             const file = event.target.files[0];
             if (!file) return;
             
-            document.getElementById("file-name").textContent = "Arquivo: " + file.name;
+            document.getElementById("file-name").textContent = "// " + file.name;
             
             const reader = new FileReader();
             reader.onload = function(e) {
